[package]
name = "uklient-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
thiserror = "1.0"
# TODO use dedalus only
theseus = { git = "https://github.com/uku3lig/theseus" }
daedalus = "0.1.17"
java-locator = "0.1"
webbrowser = "0.8"
tokio = "1.24"
url = "2.3"
home = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libium = "1.22"
ferinth = "2"
reqwest = "0.11"
fs_extra = "1"
itertools = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
flate2 = "1.0"
tar = "0.4"
