[package]
name = "uklient-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
# TODO use dedalus only or at least write my own auth system
theseus = { git = "https://git.uku3lig.net/uku/theseus" }
daedalus = "0.1.17"
java-locator = "0.1"
libium = "1.22"
ferinth = "2"

webbrowser = "0.8"
tokio = { version = "1", features = ["full"] }
url = "2.3"
reqwest = "0.11"
once_cell = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs_extra = "1"
flate2 = "1.0"
tar = "0.4"

thiserror = "1.0"
itertools = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.7"
indicatif = "0.17"
clap = { version = "4", features = [ "derive" ] }
uuid = "1"
chrono = "0.4"
